# fastapi

./: .dockerignore  .env.example  .gitignore  .gitmessage.txt  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: ♻️-리팩토링---제거.md  ✨-기능-추가.md  🐛-버그-수정.md  🔧-기타-작업.md
.github/workflows/: deploy-fastapi.yml  deploy-vision.yml
agent/report_agent/: agent.py  context_builder.py  template_mapping.md
config/: legal_rule_profiles.json
docs/: chatbot.md  legal-agent.md  observability.md  orchestrator.md  report-agent-template-mapping.md  report-agent.md  safety-doc-agent.md  vlm-ocr.md
examples/classifier_agent/: sample_input.json
examples/ocr/: receipt_202604_scenario.json  sample_match_result.json  sample_receipt_ocr.json  sample_usage_statement.json  tax_invoice_202604_scenario.json  usage_202604_scenario.json
examples/ocr/match_results/: match_batch_monthly_20260507_101453.json  (+1 more)
examples/report_agent/: sample_input.json  sample_output.docx  sample_report_draft.json
examples/validator_agent/: sample_input.json
k8s/: fastapi-configmap.yaml  fastapi-deployment.yaml  fastapi-service.yaml  kustomization.yaml
monitoring/prometheus/: ai-agent-alerts.yml
report_agent/: README.md  llm.py  renderer.py
scripts/: chat.py  export_graph.py  seed_legal_rule_profiles.json  update_classifier_profiles.py
src/: main.py
src/agents/: __init__.py
src/core/: __init__.py  config.py  json_utils.py  judge.py  llm_config.py  metrics.py  rag.py  storage.py
src/ocr/: clova_ocr_receipt.py  ocr_engine.py  parse_tax_invoice.py  parse_usage_statement.py  receipt_validator.py  vlm_ocr.py
src/prompts/: __init__.py  classifier_prompt.py  report_agent_draft_template.md  report_agent_system.md  safety_doc_agent_evidence_requirement_prompt.py  shared.py  shared_prompt.py  validator.py  validator_prompt.py
src/repositories/: __init__.py  db.py  legal_rules_export.py  legal_rules_exporter.py  legal_rules_repository.py  ocr_pipeline_repository.py  orchestrator_repository.py  qdrant_repository.py  report_repository.py  safety_doc_agent_evidence_repository.py  safety_doc_agent_postgres_evidence_repository.py  safety_doc_agent_postgres_queries.py  usage_statement_pipeline_repository.py  validation_log_repository.py
src/schemas/: __init__.py  chatbot.py  classifier.py  ocr.py  orchestrator.py  safety_doc_agent_evidence.py  shared.py  validator.py
src/services/: __init__.py  chatbot_service.py  classi_service.py  ingestion_service.py  matching_service.py  matching_service_monthly.py  minio_client.py  orchestrator_service.py  pipeline_runner.py  pipeline_service.py  refresh_service.py  s3_client.py  safety_doc_agent_evidence_check_service.py  safety_doc_agent_evidence_requirement_service.py  tax_invoice_verifier.py  usage_statement_pipeline_service.py  usage_statement_validation.py  validator_service.py
src/tools/: __init__.py  safety_doc_reference_vector.py
tests/classifier/: eval.py
tests/core/: test_json_utils.py  test_metrics.py
tests/repositories/: test_orchestrator_repository.py  test_report_repository_agent_logs.py
tests/services/: test_chatbot_service_refactor.py  test_data.py  test_matching.py  test_matching_engine.py  test_ocr_tax_invoice_vlm.py  test_orchestrator_refactor.py  test_orchestrator_vision_details.py  test_progress_rate_pattern.py  test_refresh_diff_engine.py  test_report_agent_refactor.py  test_safety_doc_batch.py  test_tax_invoice_amount_gate.py  test_tax_invoice_rejection.py
tests/smoke/: test_usage_statement_pipeline.py
tests/tools/: test_safety_doc_reference_vector.py
tests/validator/: eval.py  query.py  test_reason_templates.py
vision/: README.md
vision/src/: main.py
vision/tests/: test_review_type.py
(+76 files in other folders)
