[project]
name = "ai-workspace"
version = "0.1.0"
description = "AI agents for safety document understanding, evidence review, and report generation."
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "pydantic>=2.12,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
]

[tool.uv]
package = false

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = false
