[project]
name = "Legal-RAG"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pypdf>=4.0.0",
    "python-pptx>=0.6.21",
    "langgraph>=1.1.6",
    "python-docs>=0.1.0",
    "python-docx>=1.2.0",
    "paddlepaddle>=3.3.1",
    "paddleocr>=3.4.1",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.4",
    "matplotlib>=3.10.8",
    "pdfplumber>=0.11.9",
    "opendataloader-pdf>=2.3.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-huggingface>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "docling>=2.90.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.4.1",
    "langchain-anthropic>=1.4.1",
    "langchain-openai>=1.2.0",
    "python-dotenv>=1.2.2",
    "kiwipiepy>=0.23.1",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.46.0",
    "psycopg2-binary>=2.9.12",
    "langchain-qdrant>=1.1.0",
]
