[project]
name = "ai-workspace"
version = "0.1.0"
description = "AI agents for safety document understanding, legal validation, evidence review, and report generation."
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "boto3>=1.34.0",
  "chromadb>=0.6.0",
  "docling>=2.90.0",
  "fastapi>=0.116.0",
  "google-genai>=1.0.0",
  "kiwipiepy>=0.23.1",
  "langchain>=1.2.15",
  "langchain-classic>=1.0.0",
  "langchain-chroma>=0.2.0",
  "langchain-community>=0.4.1",
  "langchain-core>=1.3.0",
  "langchain-huggingface>=1.2.2",
  "langchain-anthropic>=1.4.1",
  "langchain-openai>=1.2.0",
  "langchain-qdrant>=1.1.0",
  "langchain-text-splitters>=1.1.2",
  "langgraph>=1.1.6",
  "langsmith>=0.4.26",
  "matplotlib>=3.10.8",
  "numpy>=2.4.4",
  "openai>=1.40.0",
  "opencv-python>=4.13.0.92",
  "opendataloader-pdf>=2.3.0",
  "paddleocr>=3.4.1",
  "paddlepaddle>=3.3.1",
  "pdfplumber>=0.11.9",
  "pillow>=10.0.0",
  "prometheus-client>=0.21.0",
  "psycopg[binary]>=3.2.0",
  "psycopg2-binary>=2.9.0",
  "pydantic>=2.12,<3",
  "pypdf>=4.0.0",
  "python-dateutil>=2.9.0",
  "python-docs>=0.1.0",
  "python-docx>=1.2.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "python-pptx>=0.6.21",
  "qdrant-client>=1.9.1",
  "rank-bm25>=0.2.2",
  "redis>=5.0.0",
  "requests>=2.31.0",
  "selenium>=4.15.0",
  "sentence-transformers[onnx]>=5.4.1",
  "torch==2.9.1+cpu",
  "torchvision==0.24.1+cpu",
  "uvicorn>=0.46.0",
  "webdriver-manager>=4.0.0",
]

[project.scripts]
safety-doc-agent = "agents.safety_doc_agent.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.18,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = false
